# ores

./: .dockerignore  .env.template  .gitignore  .gitmodules  Dockerfile  Dockerfile.weco-job  MANIFEST.in  ReadMe.md  auth.md  catalog-info.yaml  ores.sln  ores_tokens.db  out.txt  pyproject.toml  radixconfig.yaml  readme.md  requirements-dev.txt  requirements.txt  test_local_rddms_push.py  todo.txt
demo/: ores  (+22 more)
weco_engine/: .dockerignore  .gitignore  .weco.env.example  CMakeLists.txt  ReadMe.md  options_distality.txt  pyproject.toml  weco.code-workspace
weco_engine/.github/workflows/: docker-publish.yml  pypi-publish.yml  radix-deploy.yml  test-build.yml
weco_engine/binding/: common.h  cost_function.cpp  data.cpp  project.cpp
weco_engine/demo/: ex2_python_cost_function.py  ex4_multiscale_and_test_generation.py  show_cost_matrix.py
weco_engine/demo/data/data_set_1.1/: option_1.txt  option_2.txt  option_4.txt  outcome_1.txt  wells.txt
weco_engine/demo/data/data_set_1.2/: ReadMe.md  option.txt
weco_engine/demo/data/data_set_1.3/: option_A.txt  outcome_A.txt  wells_C.txt
weco_engine/demo/data/data_set_1.4/: ReadMe.md  option_C.opt  outcome_A.out
weco_engine/demo/data/data_set_1.5/: outcome.txt
weco_engine/demo/data/data_set_2/: ReadMe.md
weco_engine/demo/data/data_set_4/: ReadMe.md
weco_engine/demo/data/data_set_biozone_distality/: option.txt  outcome - gap cost 5.txt  outcome - gap cost 7.txt  outcome.txt
weco_engine/demo/data/data_set_bryson/: options_basic.txt  options_distal.txt  rebuild_from_source.py  wells.txt  wells.weco.json
weco_engine/demo/data/data_set_carbonate/: ReadMe.md  generate_carbonate.py  options_demo.txt  wells.txt  wells.weco.json
weco_engine/demo/data/data_set_coal/: ReadMe.md  generate_coal.py  options_basic.txt  options_coal.txt  options_demo.txt  options_seam_constrained.txt  wells.txt  wells.weco.json  wells_10.txt
weco_engine/demo/data/data_set_delta/: ReadMe.md  generate_delta.py  options.txt  options_distality.txt  wells.txt  wells.weco.json
weco_engine/demo/data/data_set_distality/: ReadMe.md  option.txt  wells.txt  wells.weco.json  wells_A.txt  wells_B.txt  wells_D.txt  wells_E.txt
weco_engine/demo/data/data_set_fluvial/: generate_fluvial.py  options.txt  wells.weco.json
weco_engine/demo/data/data_set_gap_cost/: wells.weco.json
weco_engine/demo/data/data_set_hugin_tidal/: gudrun_sigrun_strat_column.json
weco_engine/demo/data/data_set_multi_distality/: ReadMe.md  option_A.opt  outcome_C.out
weco_engine/demo/data/data_set_no_crossing_regions/: option.txt  wells.txt
weco_engine/demo/data/data_set_polarity_dip/: option.txt  wells.txt  wells.weco.json
weco_engine/demo/data/data_set_quaternary/: ReadMe.md  generate_quaternary.py  options_basic.txt  options_constrained.txt  wells.txt  wells_20.txt  wells_20.weco.json
weco_engine/demo/data/data_set_same_region/: option_A.txt  option_C.txt  outcome_C.txt
weco_engine/demo/data/data_set_shallow_marine/: ReadMe.md  generate_shallow_marine.py  options_distality.txt  options_with_biozones.txt  wells.weco.json
weco_engine/demo/data/data_set_sigrun/: ReadMe.md  gudrun_sigrun_strat_column.json  options_4_gr_facies3.txt  options_5_composite_sequence.txt  options_6_full.txt  options_gr.txt  options_unconstrained.txt  rebuild_from_source.py  wells.txt  wells.weco.json
weco_engine/demo/data/data_set_troll/: ReadMe.md  options_distal.txt  options_sequence.txt
weco_engine/demo/data/data_set_variance_weights/: option_2.txt  option_3.txt  option_4.txt  option_5.txt  outcome_3.txt  outcome_4.txt  outcome_5.txt
weco_engine/demo/resqml/: ReadMe.md  generate_payloads.py  ingest_wells.py
weco_engine/demo/resqml/payloads/: manifest.json
weco_engine/doc/: architecture.md  cost_normalization.md  decision_tree.md  demo_results_analysis.md  domain_strategies.md  examples.md  formats.md  geology_primer.md  gui.md  ores_integration.md  parameters.md  seistiles_constraint.md  todo.md  tutorial_correlation.ipynb  validation_report.ipynb  validation_report.md
weco_engine/doc_src/: addregion.rst  ai.auto_tune.rst  ai.facies.rst  ai.log_qc.rst  ai.quality.rst  ai.uncertainty.rst  api.rst  check.rst  commands.rst  conf.py  cost_functions.rst  dump_well_list.rst  ext.rst  flow_interface.rst  formats.rst  hints.rst  order.rst  preprocessing.rst  res2las.rst  resqml.rst  seistiles.rst  sensitivity.rst  utils.rst  validate.rst  workflow.rst
weco_engine/doc_src/figures/: multiscale_figures.py
weco_engine/include/: weco_plugin.h
weco_engine/include/b3d/: common.h  control_point.h  curve.h  patch.h
weco_engine/include/weco/: autoreg.h  config.h.in  corgraph_builder.h  datareader.h  matrix.h  project.h  scheduler.h  utils.h
weco_engine/plugin/: plugin.cpp
weco_engine/pytest/: conftest.py  test_api_utils.py  test_auto_pipeline.py  test_benchmark.py  test_conv.py  test_convert.py  test_export.py  test_facies_dict.py  test_geology_norwegian.py  test_geomodel_feedback.py  test_gpu_kernel.py  test_infra.py  test_preprocessing_sensitivity.py  test_project.py  test_rddms.py  test_rddms_strat.py  test_seismic_constraint.py  test_seistiles.py  test_truth.py  test_validate.py
weco_engine/src/: ccf_b3d.cpp  ccf_gap.cpp  ccf_polarity.cpp  ccf_thickness.cpp  correlator.cpp  datareader.cpp  dtw_distance.cpp  log.cpp  main.cpp  project.cpp  project_test.cpp  scheduler.cpp  test1.cpp  test2.cpp  test3.cpp
weco_engine/src/b3d/: control_point.cpp  corner_point.cpp  profile.cpp
weco_engine/tmp/: run_all_demos.py
weco_engine/weco/: __init__.py  _correlator.pyx  api.py  baseview.py  batch.py  check.py  correlation_plot.py  correlator_numba.py  data.py  data_import.py  depenv.py  engine.pyi  engine_data.py  export.py  ext.py  gocad_bridge.py  gpu_kernel.py  las2welllist.py  multiscale.py  preprocessing.py  rddms.py  res2las.py  resqml.py  resview.py  roundtrip.py  seismic_constraint.py  sensitivity.py  studio.py  testgen.py  utils.py
weco_engine/weco/ai/: __init__.py  anomaly.py  auto_tune.py  facies_predict.py  learned_cost.py  log_qc.py  uncertainty.py
weco_engine/weco/formats/: las3.py
(+830 files in other folders)
